--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,25 +1,37 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     </head>
     <body>
-        <div th:each="pedido : ${pedidos}">
-            <div th:text="${pedido.nomeProduto}">Nome do Produto</div>
-            <div th:text="${pedido.valorNegociado}">Valor: <span>200,99</span></div>
-            <div th:text="${pedido.dataEntrega}">Data de entrega: <span>10/02/2020</span></div>
+        <div class="container">
+            <div th:each="pedido : ${pedidos}"  class="card">
+                <div class="card-header" th:text="${pedido.nomeProduto}">Nome do Produto</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-12 col-sm-8 mb-3">
+                            <div class="row">
+                                <div class="col-md-5">Valor: <span th:text="${pedido.valorNegociado}">200,99</span></div>
+                                <div class="col-md-7">Data de entrega: <span th:text="${pedido.dataEntrega}">10/02/2020</span></div>
+                            </div>
 
-            <div>Produto</div>
-            <div><input th:value="${pedido.urlProduto}" value="url do produto"></div>
+                            <div>Produto</div>
+                            <div><input class="form-control" th:value="${pedido.urlProduto}" value="url do produto"></div>
 
-            <div>Descrição</div>
-            <div>
-                <textarea  th:text="${pedido.descricao}">descrição do pedido </textarea>
+                            <div>Descrição</div>
+                            <div>
+                                <textarea class="form-control" th:text="${pedido.descricao}">descrição do pedido </textarea>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-4 ">
+                            <div>
+                                <img class="img-thumbnail" th:src="${pedido.urlImagem}" src=""/>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
-
-            <div>
-                <img th:src="${pedido.urlImagem}" src=""/>
-            </div>
-
         </div>
     </body>
 </html>
