Equalizando codigo com a aula

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,8 +1,8 @@
 <html>
-  <head>
-      <meta charset="UTF-8">
-  </head>
-  <body>
-     Oi! <span th:text="${nome}">João</span>!
-  </body>
+	<head>
+		<meta charset="UTF-8">
+	</head>
+	<body>
+		Oi <span th:text="${nome}">João</span>!
+	</body>
 </html>
